manifests/platform-config/gateway/gateway-class.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: GatewayClass
metadata:
  name: data-science-gateway-class
spec:
  controllerName: openshift.io/gateway-controller/v1
