manifests/platform-config/gateway/gateway.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: Gateway
metadata:
  name: maas-default-gateway
  namespace: openshift-ingress
  annotations:
    security.opendatahub.io/authorino-tls-bootstrap: "true"
spec:
  gatewayClassName: data-science-gateway-class
  listeners:
    - name: maas
      hostname: "maas.CLUSTER_DOMAIN_PLACEHOLDER"
      port: 443
      protocol: HTTPS
      tls:
        mode: Terminate
        certificateRefs:
          - name: cert-manager-ingress-cert
      allowedRoutes:
        namespaces:
          from: All
